enable browser caching
* [Lighthouse](https://web.dev/uses-long-cache-ttl/?utm_source=lighthouse&utm_medium=unknown)
* [Stackoverflow](https://stackoverflow.com/questions/4480304/how-to-set-http-headers-for-cache-control)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd" Cache-Control:public;>
+
 <html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta charset="utf-8">
+    <meta http-equiv="Cache-control" content="public">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Haruno">
 	<meta name="author" content="github.com/sswellington" />
 	<meta name="robots" content="Haruno - Desenvolvimento Web">
@@ -16,8 +19,6 @@
 	<link rel="shortcut icon" href="static/ico/favicon/Haruno Sakura.png" />
     <link rel="stylesheet" href="static/css/new.css" />
     <link rel="stylesheet" href="static/css/sarada.css" />
-    <!-- <link rel="stylesheet" href="static/css/layout.css" /> -->
-    
 </head>
 <body>
 
@@ -30,19 +31,6 @@
             <a href="#"> Sobre &nbsp; </a>
         </nav>
         <a href="#">  <h1> Haruno </h1> </a>
-
-        <!-- <nav>
-            Topicos
-            <a href="#" rel="noreferrer" target="_blank">
-                <img alt="#"
-                    src="static/ico/nav/common-app-design-icon/popular-2-32.png">
-            </a>
-
-            <a href="#" rel="noreferrer" target="_blank">
-                <img alt="#"
-                    src="static/ico/nav/common-app-design-icon/collection-2-3-32.png">
-            </a>
-        </nav> -->
     </header>
 
     <main>
