feat: transition and transform of scale

--- a/index.html
+++ b/index.html
@@ -153,20 +153,25 @@
 
 
             <div class="gallery">
+
                 <h1> Gallery </h1>
 
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
-                <img src="screenshot/time7.jpg" alt="O Time 7 no clássico">
+                <img src="./static/img/00.jpg" alt="Haruno">
+                <img src="./static/img/01.jpg" alt="Haruno">
+                <img src="./static/img/02.jpg" alt="Haruno">
+
+                <img src="./static/img/03.jpg" alt="Haruno">
+                <img src="./static/img/04.jpg" alt="Haruno">
+                <img src="./static/img/05.jpg" alt="Haruno">
+
+                <img src="./static/img/06.jpg" alt="Haruno">
+                <img src="./static/img/07.jpg" alt="Haruno">
+                <img src="./static/img/08.jpg" alt="Haruno">
+
+                <img src="./static/img/09.jpg" alt="Haruno">
+                <img src="./static/img/10.jpg" alt="Haruno">
+                <img src="./static/img/11.jpg" alt="Haruno">
+
             </div>
 
 
